WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276925
Scroll-to-text-fragment is leaked to the loaded page through Navigation Timing.
https://bugs.webkit.org/show_bug.cgi?id=276925
Summary
Scroll-to-text-fragment is leaked to the loaded page through Navigation Timing.
Megan Gardner
Reported
2024-07-22 21:00:02 PDT
Scroll-to-text-fragment is leaked to the loaded page through Navigation Timing and the fetch event.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2024-07-22 21:08:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31092
EWS
Comment 2
2024-07-23 21:32:15 PDT
Committed
281273@main
(1d776f617268): <
https://commits.webkit.org/281273@main
> Reviewed commits have been landed. Closing PR #31092 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-23 21:33:15 PDT
<
rdar://problem/132377691
>
EWS
Comment 4
2024-07-24 18:57:35 PDT
Committed
280938.119@safari-7619-branch
(e693ba9d3f9e): <
https://commits.webkit.org/280938.119@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1486 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug