Cherry-pick 281273@main (1d776f617268). https://bugs.webkit.org/show_bug.cgi?id=276925

Scroll-to-text-fragment is leaked to the loaded page through Navigation Timing.
    https://bugs.webkit.org/show_bug.cgi?id=276925
    rdar://124717009

    Reviewed by Ryosuke Niwa.

    We need to strip the fragment from the URL earlier so that the full URL does not end up
    in the performance metrics, leaking the fragment that should be invisible to the page.

    WPT test will need to be upstreamed after this patch lands.

    * LayoutTests/imported/w3c/web-platform-tests/scroll-to-text-fragment/scroll-to-text-fragment-target.html:
    * LayoutTests/imported/w3c/web-platform-tests/scroll-to-text-fragment/scroll-to-text-fragment.html:
    * Source/WebCore/dom/Document.cpp:
    (WebCore::Document::setURL):
    * Source/WebCore/loader/DocumentLoader.cpp:
    (WebCore::DocumentLoader::startLoadingMainResource):
    * Source/WebCore/page/Page.cpp:
    (WebCore::Page::setMainFrameURLFragment):
    * Source/WebCore/page/Page.h:
    (WebCore::Page::mainFrameURLFragment const):

    Canonical link: https://commits.webkit.org/281273@main

Canonical link: https://commits.webkit.org/274313.392@webkitglib/2.44